--- a/website/front-end/package.json
+++ b/website/front-end/package.json
@@ -16,6 +16,8 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "ag-grid-community": "^22.1.1",
+    "ag-grid-react": "^22.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
@@ -24,9 +26,9 @@
     "core-js": "^3.1.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "faker": "^4.1.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
-    "faker": "^4.1.0",
     "lodash.filter": "4.6.0",
     "lodash.find": "4.6.0",
     "lodash.findkey": "4.6.0",
@@ -54,7 +56,24 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "d3-array": "^2.0.2",
+    "d3-collection": "^1.0.7",
+    "d3-color": "^1.2.3",
+    "d3-format": "^1.3.2",
+    "d3-hierarchy": "^1.1.8",
+    "d3-interpolate": "^1.3.2",
+    "d3-path": "^1.0.7",
+    "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-shape": "^1.2.2",
+    "d3-time": "^1.0.10",
+    "d3-time-format": "^2.1.3",
+    "d3-transition": "^1.1.3",
+    "shallowequal": "^1.1.0"
+  },
+  "peerDependencies": {
+    "prop-types": ">16.0.0"
   },
   "devDependencies": {
     "react-scripts": "^3.0.1"
