--- a/website/front-end/package.json
+++ b/website/front-end/package.json
@@ -24,6 +24,19 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
     "core-js": "^3.1.4",
+    "d3-array": "^2.0.2",
+    "d3-collection": "^1.0.7",
+    "d3-color": "^1.2.3",
+    "d3-format": "^1.3.2",
+    "d3-hierarchy": "^1.1.8",
+    "d3-interpolate": "^1.3.2",
+    "d3-path": "^1.0.7",
+    "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-shape": "^1.2.2",
+    "d3-time": "^1.0.10",
+    "d3-time-format": "^2.1.3",
+    "d3-transition": "^1.1.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "faker": "^4.1.0",
@@ -71,6 +84,9 @@
     "d3-time-format": "^2.1.3",
     "d3-transition": "^1.1.3",
     "shallowequal": "^1.1.0"
+  },
+  "peerDependencies": {
+    "prop-types": ">16.0.0"
   },
   "peerDependencies": {
     "prop-types": ">16.0.0"
