--- a/website/server/package.json
+++ b/website/server/package.json
@@ -19,7 +19,8 @@
         "express": "^4.17.1",
         "http": "0.0.0",
         "http-proxy": "^1.18.0",
-        "jsonfile": "^5.0.0"
+        "jsonfile": "^5.0.0",
+        "node-rest-client": "^3.1.0"
     },
     "devDependencies": {}
 }
