--- a/website/front-end/package.json
+++ b/website/front-end/package.json
@@ -12,6 +12,7 @@
     "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
   },
   "dependencies": {
+    "@ag-grid-community/all-modules": "^22.1.1",
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
@@ -24,6 +25,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
     "core-js": "^3.1.4",
+    "d3": "^5.15.0",
     "d3-array": "^2.0.2",
     "d3-collection": "^1.0.7",
     "d3-color": "^1.2.3",
@@ -42,6 +44,7 @@
     "faker": "^4.1.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "gapi-script": "^1.0.1",
     "lodash.filter": "4.6.0",
     "lodash.find": "4.6.0",
     "lodash.findkey": "4.6.0",
@@ -59,18 +62,22 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-chartjs-2": "^2.7.6",
+    "react-d3-tree": "^1.16.1",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.5",
     "react-redux": "^7.1.3",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "simple-line-icons": "^2.4.1",
-    "shallowequal": "^1.1.0"
+    "shallowequal": "^1.1.0",
+    "simple-line-icons": "^2.4.1"
   },
   "peerDependencies": {
     "prop-types": ">16.0.0"
