--- a/website/server/package.json
+++ b/website/server/package.json
@@ -9,8 +9,8 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "proxy": "node proxy-server.js",
-        "mock-server": "node app-server.js",
+        "proxy": "nodemon proxy-server.js",
+        "mock-server": "nodemon app-server.js",
         "start-all-servers": "concurrently --kill-others \"npm run proxy\" \"npm run mock-server\""
     },
     "private": true,
@@ -20,7 +20,8 @@
         "http": "0.0.0",
         "http-proxy": "^1.18.0",
         "jsonfile": "^5.0.0",
-        "node-rest-client": "^3.1.0"
+        "node-rest-client": "^3.1.0",
+        "nodemon": "^2.0.2"
     },
     "devDependencies": {}
 }
