--- a/website/service-node.yaml
+++ b/website/service-node.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-portal-service
+  name: nodejs-service
 spec:
   selector:
-    name: release-portal
-    type: ClusterIP
+    name: nodejs
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 5051
-  externalIPs:
-    - <ipaddress>
   type: LoadBalancer 
+  externalIPs:
+    - 80.11.12.10
